--- a/assets/bundles/bundle_ru.properties
+++ b/assets/bundles/bundle_ru.properties
@@ -1,12 +1,24 @@
 mod.version = 0.1
-mod.updateDate = 14 \u0430\u043F\u0440. 2025\u202F\u0433.
+mod.updateDate = 16 \u0430\u043F\u0440. 2025\u202F\u0433.
 
 settings.helium = (\u043D\u0443\u0436\u0435\u043D \u043F\u0435\u0440\u0435\u0432\u043E\u0434) \u6C26\u914D\u7F6E
 settings.category.basic = (\u043D\u0443\u0436\u0435\u043D \u043F\u0435\u0440\u0435\u0432\u043E\u0434) \u57FA\u7840\u8BBE\u7F6E
+
 settings.basic.backBlur = (\u043D\u0443\u0436\u0435\u043D \u043F\u0435\u0440\u0435\u0432\u043E\u0434) \u80CC\u666F\u6A21\u7CCA
 settings.item.enableBlur = (\u043D\u0443\u0436\u0435\u043D \u043F\u0435\u0440\u0435\u0432\u043E\u0434) \u542F\u7528\u80CC\u666F\u6A21\u7CCA
 settings.item.blurScl = (\u043D\u0443\u0436\u0435\u043D \u043F\u0435\u0440\u0435\u0432\u043E\u0434) \u6A21\u7CCA\u7EA7\u522B
 settings.item.blurSpace = (\u043D\u0443\u0436\u0435\u043D \u043F\u0435\u0440\u0435\u0432\u043E\u0434) \u6A21\u7CCA\u5F3A\u5EA6
+
+settings.basic.entityInfo = (\u043D\u0443\u0436\u0435\u043D \u043F\u0435\u0440\u0435\u0432\u043E\u0434) \u80CC\u666F\u6A21\u7CCA
+settings.item.enableEntityInfoDisplay = (\u043D\u0443\u0436\u0435\u043D \u043F\u0435\u0440\u0435\u0432\u043E\u0434) \u542F\u7528\u5B9E\u4F53\u4FE1\u606F\u663E\u793A
+settings.item.enableHealthBarDisplay = (\u043D\u0443\u0436\u0435\u043D \u043F\u0435\u0440\u0435\u0432\u043E\u0434) \u542F\u7528\u751F\u547D\u503C\u663E\u793A\u9762\u677F
+settings.item.enableUnitStatusDisplay = (\u043D\u0443\u0436\u0435\u043D \u043F\u0435\u0440\u0435\u0432\u043E\u0434) \u542F\u7528\u5355\u4F4D\u72B6\u6001\u663E\u793A
+settings.item.entityInfoScale = (\u043D\u0443\u0436\u0435\u043D \u043F\u0435\u0440\u0435\u0432\u043E\u0434) \u4FE1\u606F\u663E\u793A\u7F29\u653E
+settings.item.entityInfoAlpha = (\u043D\u0443\u0436\u0435\u043D \u043F\u0435\u0440\u0435\u0432\u043E\u0434) \u4FE1\u606F\u6307\u793A\u5668\u900F\u660E\u5EA6
+settings.item.showAttackRange = (\u043D\u0443\u0436\u0435\u043D \u043F\u0435\u0440\u0435\u0432\u043E\u0434) \u663E\u793A\u653B\u51FB\u8303\u56F4
+settings.item.showHealRange = (\u043D\u0443\u0436\u0435\u043D \u043F\u0435\u0440\u0435\u0432\u043E\u0434) \u663E\u793A\u4FEE\u590D\u8303\u56F4
+settings.item.showOverdriveRange = (\u043D\u0443\u0436\u0435\u043D \u043F\u0435\u0440\u0435\u0432\u043E\u0434) \u663E\u793A\u8D85\u901F\u6295\u5F71\u8303\u56F4
+settings.item.hiddenTeams = (\u043D\u0443\u0436\u0435\u043D \u043F\u0435\u0440\u0435\u0432\u043E\u0434) \u9690\u85CF\u7684\u961F\u4F0D
 
 infos.relaunchEnsure = (\u043D\u0443\u0436\u0435\u043D \u043F\u0435\u0440\u0435\u0432\u043E\u0434) \u4E00\u4E9B\u914D\u7F6E\u9879\u7684\u53D8\u66F4\u9700\u8981\u91CD\u542F\u751F\u6548
 infos.confirmResetConfig = (\u043D\u0443\u0436\u0435\u043D \u043F\u0435\u0440\u0435\u0432\u043E\u0434) \u786E\u5B9A\u8981\u6062\u590D\u9ED8\u8BA4\u8BBE\u7F6E\u5417\uFF1F
