优化范围显示器

--- a/assets/bundles/bundle_ru.properties
+++ b/assets/bundles/bundle_ru.properties
@@ -13,6 +13,7 @@ settings.basic.entityInfo = (\u043D\u0443\u0436\u0435\u043D \u043F\u0435\u0440\u
 settings.item.enableEntityInfoDisplay = (\u043D\u0443\u0436\u0435\u043D \u043F\u0435\u0440\u0435\u0432\u043E\u0434) \u542F\u7528\u5B9E\u4F53\u4FE1\u606F\u663E\u793A
 settings.item.enableHealthBarDisplay = (\u043D\u0443\u0436\u0435\u043D \u043F\u0435\u0440\u0435\u0432\u043E\u0434) \u542F\u7528\u751F\u547D\u503C\u663E\u793A\u9762\u677F
 settings.item.enableUnitStatusDisplay = (\u043D\u0443\u0436\u0435\u043D \u043F\u0435\u0440\u0435\u0432\u043E\u0434) \u542F\u7528\u5355\u4F4D\u72B6\u6001\u663E\u793A
+settings.item.entityInfoHotKey = (\u043D\u0443\u0436\u0435\u043D \u043F\u0435\u0440\u0435\u0432\u043E\u0434) \u4FE1\u606F\u663E\u793A\u63A7\u5236\u70ED\u952E
 settings.item.entityInfoScale = (\u043D\u0443\u0436\u0435\u043D \u043F\u0435\u0440\u0435\u0432\u043E\u0434) \u4FE1\u606F\u663E\u793A\u7F29\u653E
 settings.item.entityInfoAlpha = (\u043D\u0443\u0436\u0435\u043D \u043F\u0435\u0440\u0435\u0432\u043E\u0434) \u4FE1\u606F\u6307\u793A\u5668\u900F\u660E\u5EA6
 settings.item.showAttackRange = (\u043D\u0443\u0436\u0435\u043D \u043F\u0435\u0440\u0435\u0432\u043E\u0434) \u663E\u793A\u653B\u51FB\u8303\u56F4
