--- a/assets/bundles/bundle_zh_TW.properties
+++ b/assets/bundles/bundle_zh_TW.properties
@@ -13,6 +13,7 @@ settings.basic.entityInfo = (\u5F85\u7FFB\u8B6F) \u80CC\u666F\u6A21\u7CCA
 settings.item.enableEntityInfoDisplay = (\u5F85\u7FFB\u8B6F) \u542F\u7528\u5B9E\u4F53\u4FE1\u606F\u663E\u793A
 settings.item.enableHealthBarDisplay = (\u5F85\u7FFB\u8B6F) \u542F\u7528\u751F\u547D\u503C\u663E\u793A\u9762\u677F
 settings.item.enableUnitStatusDisplay = (\u5F85\u7FFB\u8B6F) \u542F\u7528\u5355\u4F4D\u72B6\u6001\u663E\u793A
+settings.item.entityInfoHotKey = (\u5F85\u7FFB\u8B6F) \u4FE1\u606F\u663E\u793A\u63A7\u5236\u70ED\u952E
 settings.item.entityInfoScale = (\u5F85\u7FFB\u8B6F) \u4FE1\u606F\u663E\u793A\u7F29\u653E
 settings.item.entityInfoAlpha = (\u5F85\u7FFB\u8B6F) \u4FE1\u606F\u6307\u793A\u5668\u900F\u660E\u5EA6
 settings.item.showAttackRange = (\u5F85\u7FFB\u8B6F) \u663E\u793A\u653B\u51FB\u8303\u56F4
