--- a/assets/bundles/bundle_ja.properties
+++ b/assets/bundles/bundle_ja.properties
@@ -1,4 +1,4 @@
-mod.version = 0.1
+mod.version = beta
 mod.updateDate = 2025/04/16
 
 settings.helium = (\u7FFB\u8A33\u5F85\u3061) \u6C26\u914D\u7F6E
