--- a/assets/bundles/bundle_zh_TW.properties
+++ b/assets/bundles/bundle_zh_TW.properties
@@ -1,4 +1,4 @@
-mod.version = 0.1
+mod.version = beta
 mod.updateDate = 2025\u5E744\u670816\u65E5
 
 settings.helium = (\u5F85\u7FFB\u8B6F) \u6C26\u914D\u7F6E
