--- a/assets/bundles/bundle_ja.properties
+++ b/assets/bundles/bundle_ja.properties
@@ -1,5 +1,5 @@
-mod.version = beta
-mod.updateDate = 2025/04/16
+mod.version = beta-0.1
+mod.updateDate = 2025/04/17
 
 settings.helium = (\u7FFB\u8A33\u5F85\u3061) \u6C26\u914D\u7F6E
 settings.category.basic = (\u7FFB\u8A33\u5F85\u3061) \u57FA\u7840\u8BBE\u7F6E
