--- a/assets/bundles/bundle_zh_TW.properties
+++ b/assets/bundles/bundle_zh_TW.properties
@@ -3,6 +3,7 @@ mod.updateDate = 2025\u5E744\u670817\u65E5
 
 settings.helium = (\u5F85\u7FFB\u8B6F) \u6C26\u914D\u7F6E
 settings.category.basic = (\u5F85\u7FFB\u8B6F) \u57FA\u7840\u8BBE\u7F6E
+settings.category.debug = (\u5F85\u7FFB\u8B6F) \u8C03\u8BD5\u8BBE\u7F6E
 
 settings.basic.backBlur = (\u5F85\u7FFB\u8B6F) \u80CC\u666F\u6A21\u7CCA
 settings.item.enableBlur = (\u5F85\u7FFB\u8B6F) \u542F\u7528\u80CC\u666F\u6A21\u7CCA
@@ -20,6 +21,9 @@ settings.item.showAttackRange = (\u5F85\u7FFB\u8B6F) \u663E\u793A\u653B\u51FB\u8
 settings.item.showHealRange = (\u5F85\u7FFB\u8B6F) \u663E\u793A\u4FEE\u590D\u8303\u56F4
 settings.item.showOverdriveRange = (\u5F85\u7FFB\u8B6F) \u663E\u793A\u8D85\u901F\u6295\u5F71\u8303\u56F4
 settings.item.hiddenTeams = (\u5F85\u7FFB\u8B6F) \u9690\u85CF\u7684\u961F\u4F0D
+
+settings.debug.logging = (\u5F85\u7FFB\u8B6F) \u65E5\u5FD7\u4FE1\u606F
+settings.item.loadingInfo = (\u5F85\u7FFB\u8B6F) \u8F93\u51FA\u52A0\u8F7D\u4FE1\u606F
 
 infos.relaunchEnsure = (\u5F85\u7FFB\u8B6F) \u4E00\u4E9B\u914D\u7F6E\u9879\u7684\u53D8\u66F4\u9700\u8981\u91CD\u542F\u751F\u6548
 infos.confirmResetConfig = (\u5F85\u7FFB\u8B6F) \u786E\u5B9A\u8981\u6062\u590D\u9ED8\u8BA4\u8BBE\u7F6E\u5417\uFF1F
