--- a/assets/bundles/bundle_de_DE.properties
+++ b/assets/bundles/bundle_de_DE.properties
@@ -1,5 +1,5 @@
 mod.version = beta-0.2
-mod.updateDate = 19.04.2025
+mod.updateDate = 22.04.2025
 
 settings.helium = (\u00DCbersetzung w\u00FCnschen) \u6C26\u914D\u7F6E
 settings.category.basic = (\u00DCbersetzung w\u00FCnschen) \u57FA\u7840\u8BBE\u7F6E
@@ -27,6 +27,11 @@ settings.item.loadingInfo = (\u00DCbersetzung w\u00FCnschen) \u8F93\u51FA\u52A0\
 
 infos.relaunchEnsure = (\u00DCbersetzung w\u00FCnschen) \u4E00\u4E9B\u914D\u7F6E\u9879\u7684\u53D8\u66F4\u9700\u8981\u91CD\u542F\u751F\u6548
 infos.confirmResetConfig = (\u00DCbersetzung w\u00FCnschen) \u786E\u5B9A\u8981\u6062\u590D\u9ED8\u8BA4\u8BBE\u7F6E\u5417\uFF1F
+infos.enabledTeams = (\u00DCbersetzung w\u00FCnschen) \u542F\u7528\u7684\u961F\u4F0D
+infos.entityDetails = (\u00DCbersetzung w\u00FCnschen) \u8BE6\u7EC6\u4FE1\u606F
+infos.entityRange = (\u00DCbersetzung w\u00FCnschen) \u8303\u56F4\u663E\u793A\u5668
+infos.healthDisplay = (\u00DCbersetzung w\u00FCnschen) \u751F\u547D\u663E\u793A\u5668
+infos.statusDisplay = (\u00DCbersetzung w\u00FCnschen) \u72B6\u6001\u6307\u793A\u5668
 
 misc.later = (\u00DCbersetzung w\u00FCnschen) \u7A0D\u540E\u91CD\u542F
 misc.exitGame = (\u00DCbersetzung w\u00FCnschen) \u9000\u51FA\u6E38\u620F
