--- a/assets/bundles/bundle_zh_TW.properties
+++ b/assets/bundles/bundle_zh_TW.properties
@@ -1,5 +1,5 @@
 mod.version = beta-0.2
-mod.updateDate = 2025\u5E744\u670819\u65E5
+mod.updateDate = 2025\u5E744\u670822\u65E5
 
 settings.helium = (\u5F85\u7FFB\u8B6F) \u6C26\u914D\u7F6E
 settings.category.basic = (\u5F85\u7FFB\u8B6F) \u57FA\u7840\u8BBE\u7F6E
@@ -27,6 +27,11 @@ settings.item.loadingInfo = (\u5F85\u7FFB\u8B6F) \u8F93\u51FA\u52A0\u8F7D\u4FE1\
 
 infos.relaunchEnsure = (\u5F85\u7FFB\u8B6F) \u4E00\u4E9B\u914D\u7F6E\u9879\u7684\u53D8\u66F4\u9700\u8981\u91CD\u542F\u751F\u6548
 infos.confirmResetConfig = (\u5F85\u7FFB\u8B6F) \u786E\u5B9A\u8981\u6062\u590D\u9ED8\u8BA4\u8BBE\u7F6E\u5417\uFF1F
+infos.enabledTeams = (\u5F85\u7FFB\u8B6F) \u542F\u7528\u7684\u961F\u4F0D
+infos.entityDetails = (\u5F85\u7FFB\u8B6F) \u8BE6\u7EC6\u4FE1\u606F
+infos.entityRange = (\u5F85\u7FFB\u8B6F) \u8303\u56F4\u663E\u793A\u5668
+infos.healthDisplay = (\u5F85\u7FFB\u8B6F) \u751F\u547D\u663E\u793A\u5668
+infos.statusDisplay = (\u5F85\u7FFB\u8B6F) \u72B6\u6001\u6307\u793A\u5668
 
 misc.later = (\u5F85\u7FFB\u8B6F) \u7A0D\u540E\u91CD\u542F
 misc.exitGame = (\u5F85\u7FFB\u8B6F) \u9000\u51FA\u6E38\u620F
