--- a/assets/bundles/bundle_ja.properties
+++ b/assets/bundles/bundle_ja.properties
@@ -1,5 +1,5 @@
 mod.version = beta-0.2
-mod.updateDate = 2025/04/22
+mod.updateDate = 2025/04/24
 
 settings.helium = (\u7FFB\u8A33\u5F85\u3061) \u6C26\u914D\u7F6E
 settings.category.basic = (\u7FFB\u8A33\u5F85\u3061) \u57FA\u7840\u8BBE\u7F6E
@@ -10,20 +10,24 @@ settings.item.enableBlur = (\u7FFB\u8A33\u5F85\u3061) \u542F\u7528\u80CC\u666F\u
 settings.item.blurScl = (\u7FFB\u8A33\u5F85\u3061) \u6A21\u7CCA\u7EA7\u522B
 settings.item.blurSpace = (\u7FFB\u8A33\u5F85\u3061) \u6A21\u7CCA\u5F3A\u5EA6
 
-settings.basic.entityInfo = (\u7FFB\u8A33\u5F85\u3061) \u80CC\u666F\u6A21\u7CCA
+settings.basic.entityInfo = (\u7FFB\u8A33\u5F85\u3061) \u5B9E\u4F53\u4FE1\u606F\u663E\u793A\u5668
 settings.item.enableEntityInfoDisplay = (\u7FFB\u8A33\u5F85\u3061) \u542F\u7528\u5B9E\u4F53\u4FE1\u606F\u663E\u793A
 settings.item.enableHealthBarDisplay = (\u7FFB\u8A33\u5F85\u3061) \u542F\u7528\u751F\u547D\u503C\u663E\u793A\u9762\u677F
 settings.item.enableUnitStatusDisplay = (\u7FFB\u8A33\u5F85\u3061) \u542F\u7528\u5355\u4F4D\u72B6\u6001\u663E\u793A
-settings.item.entityInfoHotKey = (\u7FFB\u8A33\u5F85\u3061) \u4FE1\u606F\u663E\u793A\u63A7\u5236\u70ED\u952E
-settings.item.entityInfoScale = (\u7FFB\u8A33\u5F85\u3061) \u4FE1\u606F\u663E\u793A\u7F29\u653E
-settings.item.entityInfoAlpha = (\u7FFB\u8A33\u5F85\u3061) \u4FE1\u606F\u6307\u793A\u5668\u900F\u660E\u5EA6
+settings.item.enableRangeDisplay = (\u7FFB\u8A33\u5F85\u3061) \u542F\u7528\u8303\u56F4\u663E\u793A
 settings.item.showAttackRange = (\u7FFB\u8A33\u5F85\u3061) \u663E\u793A\u653B\u51FB\u8303\u56F4
 settings.item.showHealRange = (\u7FFB\u8A33\u5F85\u3061) \u663E\u793A\u4FEE\u590D\u8303\u56F4
 settings.item.showOverdriveRange = (\u7FFB\u8A33\u5F85\u3061) \u663E\u793A\u8D85\u901F\u6295\u5F71\u8303\u56F4
-settings.item.hiddenTeams = (\u7FFB\u8A33\u5F85\u3061) \u9690\u85CF\u7684\u961F\u4F0D
+settings.item.entityInfoHotKey = (\u7FFB\u8A33\u5F85\u3061) \u4FE1\u606F\u663E\u793A\u63A7\u5236\u70ED\u952E
+settings.item.entityInfoScale = (\u7FFB\u8A33\u5F85\u3061) \u4FE1\u606F\u663E\u793A\u7F29\u653E
+settings.item.entityInfoAlpha = (\u7FFB\u8A33\u5F85\u3061) \u4FE1\u606F\u6307\u793A\u5668\u900F\u660E\u5EA6
 
 settings.debug.logging = (\u7FFB\u8A33\u5F85\u3061) \u65E5\u5FD7\u4FE1\u606F
 settings.item.loadingInfo = (\u7FFB\u8A33\u5F85\u3061) \u8F93\u51FA\u52A0\u8F7D\u4FE1\u606F
+
+config.showAttackRange = (\u7FFB\u8A33\u5F85\u3061) \u663E\u793A\u653B\u51FB\u8303\u56F4
+config.showHealRange = (\u7FFB\u8A33\u5F85\u3061) \u663E\u793A\u4FEE\u590D\u8303\u56F4
+config.showOverdriveRange = (\u7FFB\u8A33\u5F85\u3061) \u663E\u793A\u8D85\u901F\u6295\u5F71\u8303\u56F4
 
 infos.relaunchEnsure = (\u7FFB\u8A33\u5F85\u3061) \u4E00\u4E9B\u914D\u7F6E\u9879\u7684\u53D8\u66F4\u9700\u8981\u91CD\u542F\u751F\u6548
 infos.confirmResetConfig = (\u7FFB\u8A33\u5F85\u3061) \u786E\u5B9A\u8981\u6062\u590D\u9ED8\u8BA4\u8BBE\u7F6E\u5417\uFF1F
@@ -32,6 +36,9 @@ infos.entityDetails = (\u7FFB\u8A33\u5F85\u3061) \u8BE6\u7EC6\u4FE1\u606F
 infos.entityRange = (\u7FFB\u8A33\u5F85\u3061) \u8303\u56F4\u663E\u793A\u5668
 infos.healthDisplay = (\u7FFB\u8A33\u5F85\u3061) \u751F\u547D\u663E\u793A\u5668
 infos.statusDisplay = (\u7FFB\u8A33\u5F85\u3061) \u72B6\u6001\u6307\u793A\u5668
+infos.enableAll = (\u7FFB\u8A33\u5F85\u3061) \u542F\u7528\u5168\u90E8
+infos.disableAll = (\u7FFB\u8A33\u5F85\u3061) \u7981\u7528\u5168\u90E8
+infos.allSetting = (\u7FFB\u8A33\u5F85\u3061) \u5168\u90E8\u8BBE\u7F6E
 
 misc.later = (\u7FFB\u8A33\u5F85\u3061) \u7A0D\u540E\u91CD\u542F
 misc.exitGame = (\u7FFB\u8A33\u5F85\u3061) \u9000\u51FA\u6E38\u620F
