--- a/assets/bundles/bundle_ru.properties
+++ b/assets/bundles/bundle_ru.properties
@@ -22,6 +22,9 @@ settings.item.entityInfoHotKey = (\u043D\u0443\u0436\u0435\u043D \u043F\u0435\u0
 settings.item.entityInfoScale = (\u043D\u0443\u0436\u0435\u043D \u043F\u0435\u0440\u0435\u0432\u043E\u0434) \u4FE1\u606F\u663E\u793A\u7F29\u653E
 settings.item.entityInfoAlpha = (\u043D\u0443\u0436\u0435\u043D \u043F\u0435\u0440\u0435\u0432\u043E\u0434) \u4FE1\u606F\u6307\u793A\u5668\u900F\u660E\u5EA6
 
+settings.basic.placement = (\u043D\u0443\u0436\u0435\u043D \u043F\u0435\u0440\u0435\u0432\u043E\u0434) \u653E\u7F6E\u9762\u677F
+settings.item.enableBetterPlacement = (\u043D\u0443\u0436\u0435\u043D \u043F\u0435\u0440\u0435\u0432\u043E\u0434) \u542F\u7528\u66F4\u597D\u7684\u653E\u7F6E\u9762\u677F
+
 settings.debug.logging = (\u043D\u0443\u0436\u0435\u043D \u043F\u0435\u0440\u0435\u0432\u043E\u0434) \u65E5\u5FD7\u4FE1\u606F
 settings.item.loadingInfo = (\u043D\u0443\u0436\u0435\u043D \u043F\u0435\u0440\u0435\u0432\u043E\u0434) \u8F93\u51FA\u52A0\u8F7D\u4FE1\u606F
 
