--- a/assets/bundles/bundle_zh_CN.properties
+++ b/assets/bundles/bundle_zh_CN.properties
@@ -22,6 +22,9 @@ settings.item.entityInfoHotKey = \u4FE1\u606F\u663E\u793A\u63A7\u5236\u70ED\u952
 settings.item.entityInfoScale = \u4FE1\u606F\u663E\u793A\u7F29\u653E
 settings.item.entityInfoAlpha = \u4FE1\u606F\u6307\u793A\u5668\u900F\u660E\u5EA6
 
+settings.basic.placement = \u653E\u7F6E\u9762\u677F
+settings.item.enableBetterPlacement = \u542F\u7528\u66F4\u597D\u7684\u653E\u7F6E\u9762\u677F
+
 settings.debug.logging = \u65E5\u5FD7\u4FE1\u606F
 settings.item.loadingInfo = \u8F93\u51FA\u52A0\u8F7D\u4FE1\u606F
 
