--- a/assets/bundles/bundle_zh_TW.properties
+++ b/assets/bundles/bundle_zh_TW.properties
@@ -22,6 +22,9 @@ settings.item.entityInfoHotKey = (\u5F85\u7FFB\u8B6F) \u4FE1\u606F\u663E\u793A\u
 settings.item.entityInfoScale = (\u5F85\u7FFB\u8B6F) \u4FE1\u606F\u663E\u793A\u7F29\u653E
 settings.item.entityInfoAlpha = (\u5F85\u7FFB\u8B6F) \u4FE1\u606F\u6307\u793A\u5668\u900F\u660E\u5EA6
 
+settings.basic.placement = (\u5F85\u7FFB\u8B6F) \u653E\u7F6E\u9762\u677F
+settings.item.enableBetterPlacement = (\u5F85\u7FFB\u8B6F) \u542F\u7528\u66F4\u597D\u7684\u653E\u7F6E\u9762\u677F
+
 settings.debug.logging = (\u5F85\u7FFB\u8B6F) \u65E5\u5FD7\u4FE1\u606F
 settings.item.loadingInfo = (\u5F85\u7FFB\u8B6F) \u8F93\u51FA\u52A0\u8F7D\u4FE1\u606F
 
