--- a/assets/bundles/bundle_de_DE.properties
+++ b/assets/bundles/bundle_de_DE.properties
@@ -1,5 +1,5 @@
 mod.version = beta-0.3
-mod.updateDate = 24.04.2025
+mod.updateDate = 25.04.2025
 
 settings.helium = (\u00DCbersetzung w\u00FCnschen) \u6C26\u914D\u7F6E
 settings.category.basic = (\u00DCbersetzung w\u00FCnschen) \u57FA\u7840\u8BBE\u7F6E
@@ -31,6 +31,14 @@ settings.item.loadingInfo = (\u00DCbersetzung w\u00FCnschen) \u8F93\u51FA\u52A0\
 config.showAttackRange = (\u00DCbersetzung w\u00FCnschen) \u663E\u793A\u653B\u51FB\u8303\u56F4
 config.showHealRange = (\u00DCbersetzung w\u00FCnschen) \u663E\u793A\u4FEE\u590D\u8303\u56F4
 config.showOverdriveRange = (\u00DCbersetzung w\u00FCnschen) \u663E\u793A\u8D85\u901F\u6295\u5F71\u8303\u56F4
+
+dialog.mods.enabled = (\u00DCbersetzung w\u00FCnschen) \u5DF2\u542F\u7528
+dialog.mods.disabled = (\u00DCbersetzung w\u00FCnschen) \u5DF2\u7981\u7528
+dialog.mods.enableAll = (\u00DCbersetzung w\u00FCnschen) \u542F\u7528\u5168\u90E8
+dialog.mods.disableAll = (\u00DCbersetzung w\u00FCnschen) \u7981\u7528\u5168\u90E8
+dialog.mods.checkUpdate = (\u00DCbersetzung w\u00FCnschen) \u68C0\u67E5\u66F4\u65B0
+dialog.mods.generateList = (\u00DCbersetzung w\u00FCnschen) \u751F\u6210\u6E05\u5355
+dialog.mods.author = (\u00DCbersetzung w\u00FCnschen) \u4F5C\u8005\uFF1A{0}
 
 infos.relaunchEnsure = (\u00DCbersetzung w\u00FCnschen) \u4E00\u4E9B\u914D\u7F6E\u9879\u7684\u53D8\u66F4\u9700\u8981\u91CD\u542F\u751F\u6548
 infos.confirmResetConfig = (\u00DCbersetzung w\u00FCnschen) \u786E\u5B9A\u8981\u6062\u590D\u9ED8\u8BA4\u8BBE\u7F6E\u5417\uFF1F
