--- a/assets/bundles/bundle_zh_TW.properties
+++ b/assets/bundles/bundle_zh_TW.properties
@@ -1,5 +1,5 @@
-mod.version = beta-0.3
-mod.updateDate = 2025\u5E744\u670825\u65E5
+he.mod.version = beta-0.3
+he.mod.updateDate = 2025\u5E744\u670828\u65E5
 
 settings.helium = (\u5F85\u7FFB\u8B6F) \u6C26\u914D\u7F6E
 settings.category.basic = (\u5F85\u7FFB\u8B6F) \u57FA\u7840\u8BBE\u7F6E
@@ -25,6 +25,8 @@ settings.item.entityInfoAlpha = (\u5F85\u7FFB\u8B6F) \u4FE1\u606F\u6307\u793A\u5
 settings.basic.placement = (\u5F85\u7FFB\u8B6F) \u653E\u7F6E\u9762\u677F
 settings.item.enableBetterPlacement = (\u5F85\u7FFB\u8B6F) \u542F\u7528\u66F4\u597D\u7684\u653E\u7F6E\u9762\u677F
 
+settings.basic.modsDialog = (\u5F85\u7FFB\u8B6F) \u6A21\u7EC4\u7BA1\u7406\u5668
+
 settings.debug.logging = (\u5F85\u7FFB\u8B6F) \u65E5\u5FD7\u4FE1\u606F
 settings.item.loadingInfo = (\u5F85\u7FFB\u8B6F) \u8F93\u51FA\u52A0\u8F7D\u4FE1\u606F
 
@@ -34,11 +36,58 @@ config.showOverdriveRange = (\u5F85\u7FFB\u8B6F) \u663E\u793A\u8D85\u901F\u6295\
 
 dialog.mods.enabled = (\u5F85\u7FFB\u8B6F) \u5DF2\u542F\u7528
 dialog.mods.disabled = (\u5F85\u7FFB\u8B6F) \u5DF2\u7981\u7528
-dialog.mods.enableAll = (\u5F85\u7FFB\u8B6F) \u542F\u7528\u5168\u90E8
-dialog.mods.disableAll = (\u5F85\u7FFB\u8B6F) \u7981\u7528\u5168\u90E8
+dialog.mods.menu = (\u5F85\u7FFB\u8B6F) \u83DC\u5355
+dialog.mods.upgradeAll = (\u5F85\u7FFB\u8B6F) \u5168\u90E8\u66F4\u65B0
 dialog.mods.checkUpdate = (\u5F85\u7FFB\u8B6F) \u68C0\u67E5\u66F4\u65B0
+dialog.mods.checkFailed = (\u5F85\u7FFB\u8B6F) \u83B7\u53D6\u5931\u8D25
+dialog.mods.downloadFailed = (\u5F85\u7FFB\u8B6F) \u4E0B\u8F7D\u5931\u8D25
+dialog.mods.checkUpdating = (\u5F85\u7FFB\u8B6F) \u6B63\u5728\u68C0\u67E5\u66F4\u65B0
+dialog.mods.updateValid = (\u5F85\u7FFB\u8B6F) \u6B64mod\u6709\u53EF\u7528\u7684\u66F4\u65B0\n\u6700\u65B0\u7248\u672C\uFF1A{0}
+dialog.mods.updateValidS = (\u5F85\u7FFB\u8B6F) \u53D1\u73B0\u53EF\u7528\u7684\u66F4\u65B0
+dialog.mods.modStatCorrect = (\u5F85\u7FFB\u8B6F) mod\u5DF2\u6B63\u5E38\u88C5\u8F7D
+dialog.mods.modStatError = (\u5F85\u7FFB\u8B6F) \u6B64mod\u4E0D\u53EF\u7528
+dialog.mods.isLatest = (\u5F85\u7FFB\u8B6F) \u5DF2\u662F\u6700\u65B0\u7248\u672C
 dialog.mods.generateList = (\u5F85\u7FFB\u8B6F) \u751F\u6210\u6E05\u5355
+dialog.mods.refresh = (\u5F85\u7FFB\u8B6F) \u5237\u65B0
+dialog.mods.importFav = (\u5F85\u7FFB\u8B6F) \u5BFC\u5165\u6536\u85CF\u5939
+dialog.mods.exportFav = (\u5F85\u7FFB\u8B6F) \u5BFC\u51FA\u6536\u85CF\u5939
+dialog.mods.hideInvalid = (\u5F85\u7FFB\u8B6F) \u9690\u85CF\u4E0D\u53EF\u7528\u7684mod
 dialog.mods.author = (\u5F85\u7FFB\u8B6F) \u4F5C\u8005\uFF1A{0}
+dialog.mods.version = (\u5F85\u7FFB\u8B6F) \u7248\u672C\uFF1A{0}
+dialog.mods.jarMod = (\u5F85\u7FFB\u8B6F) \u6B64mod\u5305\u542Bjava\u7A0B\u5E8F
+dialog.mods.jsMod = (\u5F85\u7FFB\u8B6F) \u6B64mod\u5305\u542BJavaScript\u7A0B\u5E8F
+dialog.mods.hostMod = (\u5F85\u7FFB\u8B6F) \u6B64mod\u4F1A\u5728\u670D\u52A1\u5668\u4E3B\u673A\u4E0A\u5DE5\u4F5C
+dialog.mods.deprecated = (\u5F85\u7FFB\u8B6F) \u6B64mod\u9002\u914D\u7684\u6E38\u620F\u7248\u672C\u5DF2\u8FC7\u65F6\n[lightgray]\u7F3A\u5C11"minGameVersion:{0}"
+dialog.mods.unsupported = (\u5F85\u7FFB\u8B6F) \u4E0D\u517C\u5BB9\u8FC7\u65F6\u7684\u6E38\u620F\u7248\u672C\u7248\u672C\uFF0C\u8BF7\u66F4\u65B0\u4F60\u7684\u6E38\u620F
+dialog.mods.libMissing = (\u5F85\u7FFB\u8B6F) \u7F3A\u5C11\u6B64mod\u7684\u4F9D\u8D56mod
+dialog.mods.libIncomplete = (\u5F85\u7FFB\u8B6F) \u6B64mod\u7684\u4F9D\u8D56\u9879\u5B58\u5728\u9519\u8BEF
+dialog.mods.libCircleDepending = (\u5F85\u7FFB\u8B6F) \u6B64mod\u5B58\u5728\u4F9D\u8D56\u5FAA\u73AF\uFF0C\u8BF7\u62A5\u544Amod\u5F00\u53D1\u8005
+dialog.mods.error = (\u5F85\u7FFB\u8B6F) \u6B64mod\u53D1\u751F\u9519\u8BEF\uFF0C\u8BF7\u62A5\u544Amod\u5F00\u53D1\u8005
+dialog.mods.blackListed = (\u5F85\u7FFB\u8B6F) \u6B64mod\u5DF2\u88AB\u5217\u5165\u9ED1\u540D\u5355
+dialog.mods.description = (\u5F85\u7FFB\u8B6F) mod\u63CF\u8FF0
+dialog.mods.rawText = (\u5F85\u7FFB\u8B6F) \u539F\u59CB\u6587\u672C
+dialog.mods.contents = (\u5F85\u7FFB\u8B6F) mod\u5185\u5BB9
+dialog.mods.shouldRelaunch = (\u5F85\u7FFB\u8B6F) \u9700\u8981\u91CD\u542F
+dialog.mods.relaunch = (\u5F85\u7FFB\u8B6F) \u9700\u8981\u91CD\u542F\u6E38\u620F\u624D\u80FD\u5E94\u7528\u8FD9\u4E9B\u53D8\u66F4
+dialog.mods.confirmDeleteHe = (\u5F85\u7FFB\u8B6F) \u5220\u9664\u6C26mod\u9700\u8981\u7ACB\u5373\u91CD\u542F\u6E38\u620F\uFF0C\u786E\u5B9A\u5417\uFF1F
+dialog.mods.deleteMod = (\u5F85\u7FFB\u8B6F) \u5220\u9664mod
+dialog.mods.updateMod = (\u5F85\u7FFB\u8B6F) \u66F4\u65B0mod
+dialog.mods.downloadMod = (\u5F85\u7FFB\u8B6F) \u4E0B\u8F7Dmod
+dialog.mods.importMod = (\u5F85\u7FFB\u8B6F) \u5BFC\u5165mod
+dialog.mods.otherHandle = (\u5F85\u7FFB\u8B6F) \u5176\u4ED6\u64CD\u4F5C
+dialog.mods.reinstall = (\u5F85\u7FFB\u8B6F) \uFF08\u91CD\u65B0\u5B89\u88C5\uFF09
+dialog.mods.downloadComplete = (\u5F85\u7FFB\u8B6F) \u4E0B\u8F7D\u5B8C\u6210
+dialog.mods.downloading = (\u5F85\u7FFB\u8B6F) \u6B63\u5728\u4E0B\u8F7D {0}
+dialog.mods.noLink = (\u5F85\u7FFB\u8B6F) \u672A\u627E\u5230\u94FE\u63A5
+dialog.mods.exportLink = (\u5F85\u7FFB\u8B6F) \u5BFC\u51FA\u94FE\u63A5
+dialog.mods.githubLink = (\u5F85\u7FFB\u8B6F) \u6B64mod\u7684github\u94FE\u63A5\uFF1A
+dialog.mods.noGithubRepo = (\u5F85\u7FFB\u8B6F) \u6B64mod\u6CA1\u6709\u5F00\u6E90\u5230github
+dialog.mods.noDownloadLink = (\u5F85\u7FFB\u8B6F) \u6CA1\u6709\u627E\u5230\u4E0B\u8F7D\u94FE\u63A5
+dialog.mods.installed = (\u5F85\u7FFB\u8B6F) \u6B64mod\u5DF2\u5B89\u88C5
+dialog.mods.newVersion = (\u5F85\u7FFB\u8B6F) \u65B0\u7248\u672C\uFF01
+dialog.mods.favorites = (\u5F85\u7FFB\u8B6F) \u6536\u85CF\u5939
+dialog.mods.noFavorites = (\u5F85\u7FFB\u8B6F) \u6CA1\u6709\u6536\u85CF\u4EFB\u4F55mod
+dialog.mods.mods = (\u5F85\u7FFB\u8B6F) mod\u5217\u8868
 
 infos.relaunchEnsure = (\u5F85\u7FFB\u8B6F) \u4E00\u4E9B\u914D\u7F6E\u9879\u7684\u53D8\u66F4\u9700\u8981\u91CD\u542F\u751F\u6548
 infos.confirmResetConfig = (\u5F85\u7FFB\u8B6F) \u786E\u5B9A\u8981\u6062\u590D\u9ED8\u8BA4\u8BBE\u7F6E\u5417\uFF1F
@@ -50,7 +99,17 @@ infos.statusDisplay = (\u5F85\u7FFB\u8B6F) \u72B6\u6001\u6307\u793A\u5668
 infos.enableAll = (\u5F85\u7FFB\u8B6F) \u542F\u7528\u5168\u90E8
 infos.disableAll = (\u5F85\u7FFB\u8B6F) \u7981\u7528\u5168\u90E8
 infos.allSetting = (\u5F85\u7FFB\u8B6F) \u5168\u90E8\u8BBE\u7F6E
+infos.copied = (\u5F85\u7FFB\u8B6F) \u5DF2\u590D\u5236\u5230\u526A\u8D34\u677F
 
 misc.later = (\u5F85\u7FFB\u8B6F) \u7A0D\u540E\u91CD\u542F
 misc.exitGame = (\u5F85\u7FFB\u8B6F) \u9000\u51FA\u6E38\u620F
 misc.recDefault = (\u5F85\u7FFB\u8B6F) \u6062\u590D\u9ED8\u8BA4\u8BBE\u7F6E
+misc.open = (\u5F85\u7FFB\u8B6F) \u6253\u5F00
+misc.close = (\u5F85\u7FFB\u8B6F) \u5173\u95ED
+misc.copy = (\u5F85\u7FFB\u8B6F) \u590D\u5236
+misc.sequence = (\u5F85\u7FFB\u8B6F) \u987A\u5E8F
+misc.reverse = (\u5F85\u7FFB\u8B6F) \u9006\u5E8F
+misc.download = (\u5F85\u7FFB\u8B6F) \u4E0B\u8F7D
+misc.complete = (\u5F85\u7FFB\u8B6F) \u5B8C\u6210
+infos.exception = (\u5F85\u7FFB\u8B6F) \u53D1\u751F\u5F02\u5E38\uFF01
+infos.error = (\u5F85\u7FFB\u8B6F) \u53D1\u751F\u9519\u8BEF\uFF01
