--- a/assets/bundles/bundle_ru.properties
+++ b/assets/bundles/bundle_ru.properties
@@ -76,6 +76,9 @@ dialog.mods.downloadMod = (\u043D\u0443\u0436\u0435\u043D \u043F\u0435\u0440\u04
 dialog.mods.importMod = (\u043D\u0443\u0436\u0435\u043D \u043F\u0435\u0440\u0435\u0432\u043E\u0434) \u5BFC\u5165mod
 dialog.mods.otherHandle = (\u043D\u0443\u0436\u0435\u043D \u043F\u0435\u0440\u0435\u0432\u043E\u0434) \u5176\u4ED6\u64CD\u4F5C
 dialog.mods.reinstall = (\u043D\u0443\u0436\u0435\u043D \u043F\u0435\u0440\u0435\u0432\u043E\u0434) \uFF08\u91CD\u65B0\u5B89\u88C5\uFF09
+dialog.mods.inputGithubLink = (\u043D\u0443\u0436\u0435\u043D \u043F\u0435\u0440\u0435\u0432\u043E\u0434) \uF308 \u8F93\u5165mod\u7684Github\u4ED3\u5E93\u94FE\u63A5
+dialog.mods.parsing = (\u043D\u0443\u0436\u0435\u043D \u043F\u0435\u0440\u0435\u0432\u043E\u0434) \u6B63\u5728\u89E3\u6790\u94FE\u63A5
+dialog.mods.parseFailed = (\u043D\u0443\u0436\u0435\u043D \u043F\u0435\u0440\u0435\u0432\u043E\u0434) \u89E3\u6790\u5931\u8D25\uFF0C\u8BF7\u68C0\u67E5\u94FE\u63A5\u662F\u5426\u6B63\u786E
 dialog.mods.downloadComplete = (\u043D\u0443\u0436\u0435\u043D \u043F\u0435\u0440\u0435\u0432\u043E\u0434) \u4E0B\u8F7D\u5B8C\u6210
 dialog.mods.downloading = (\u043D\u0443\u0436\u0435\u043D \u043F\u0435\u0440\u0435\u0432\u043E\u0434) \u6B63\u5728\u4E0B\u8F7D {0}
 dialog.mods.noLink = (\u043D\u0443\u0436\u0435\u043D \u043F\u0435\u0440\u0435\u0432\u043E\u0434) \u672A\u627E\u5230\u94FE\u63A5
@@ -88,6 +91,8 @@ dialog.mods.newVersion = (\u043D\u0443\u0436\u0435\u043D \u043F\u0435\u0440\u043
 dialog.mods.favorites = (\u043D\u0443\u0436\u0435\u043D \u043F\u0435\u0440\u0435\u0432\u043E\u0434) \u6536\u85CF\u5939
 dialog.mods.noFavorites = (\u043D\u0443\u0436\u0435\u043D \u043F\u0435\u0440\u0435\u0432\u043E\u0434) \u6CA1\u6709\u6536\u85CF\u4EFB\u4F55mod
 dialog.mods.mods = (\u043D\u0443\u0436\u0435\u043D \u043F\u0435\u0440\u0435\u0432\u043E\u0434) mod\u5217\u8868
+dialog.mods.openFolderFailed = (\u043D\u0443\u0436\u0435\u043D \u043F\u0435\u0440\u0435\u0432\u043E\u0434) \u65E0\u6CD5\u6253\u5F00\u76EE\u5F55
+dialog.mods.cantOpenOnAndroid = (\u043D\u0443\u0436\u0435\u043D \u043F\u0435\u0440\u0435\u0432\u043E\u0434) \u5728Android\u8BBE\u5907\u4E0A\u65E0\u6CD5\u6253\u5F00\u6587\u4EF6\u8DEF\u5F84\n\u4F60\u53EF\u4EE5\u590D\u5236\u5982\u4E0B\u8DEF\u5F84\u624B\u52A8\u5728\u6587\u4EF6\u7BA1\u7406\u5668\u4E2D\u6253\u5F00\uFF1A
 
 infos.relaunchEnsure = (\u043D\u0443\u0436\u0435\u043D \u043F\u0435\u0440\u0435\u0432\u043E\u0434) \u4E00\u4E9B\u914D\u7F6E\u9879\u7684\u53D8\u66F4\u9700\u8981\u91CD\u542F\u751F\u6548
 infos.confirmResetConfig = (\u043D\u0443\u0436\u0435\u043D \u043F\u0435\u0440\u0435\u0432\u043E\u0434) \u786E\u5B9A\u8981\u6062\u590D\u9ED8\u8BA4\u8BBE\u7F6E\u5417\uFF1F
@@ -101,6 +106,8 @@ infos.disableAll = (\u043D\u0443\u0436\u0435\u043D \u043F\u0435\u0440\u0435\u043
 infos.allSetting = (\u043D\u0443\u0436\u0435\u043D \u043F\u0435\u0440\u0435\u0432\u043E\u0434) \u5168\u90E8\u8BBE\u7F6E
 infos.copied = (\u043D\u0443\u0436\u0435\u043D \u043F\u0435\u0440\u0435\u0432\u043E\u0434) \u5DF2\u590D\u5236\u5230\u526A\u8D34\u677F
 
+infos.wip = (\u043D\u0443\u0436\u0435\u043D \u043F\u0435\u0440\u0435\u0432\u043E\u0434) WIP
+infos.notImplementYet = (\u043D\u0443\u0436\u0435\u043D \u043F\u0435\u0440\u0435\u0432\u043E\u0434) \u6682\u672A\u5B9E\u73B0
 misc.later = (\u043D\u0443\u0436\u0435\u043D \u043F\u0435\u0440\u0435\u0432\u043E\u0434) \u7A0D\u540E\u91CD\u542F
 misc.exitGame = (\u043D\u0443\u0436\u0435\u043D \u043F\u0435\u0440\u0435\u0432\u043E\u0434) \u9000\u51FA\u6E38\u620F
 misc.recDefault = (\u043D\u0443\u0436\u0435\u043D \u043F\u0435\u0440\u0435\u0432\u043E\u0434) \u6062\u590D\u9ED8\u8BA4\u8BBE\u7F6E
