修复裁切空间外的详情面板显示问题 简化范围显示器动画效果 优化部分图标

--- a/assets/bundles/bundle_ja.properties
+++ b/assets/bundles/bundle_ja.properties
@@ -1,8 +1,9 @@
-he.mod.version = beta-0.3
-he.mod.updateDate = 2025/04/28
+he.mod.version = beta-0.4
+he.mod.updateDate = 2025/04/29
 
 settings.helium = (\u7FFB\u8A33\u5F85\u3061) \u6C26\u914D\u7F6E
 settings.category.basic = (\u7FFB\u8A33\u5F85\u3061) \u57FA\u7840\u8BBE\u7F6E
+settings.category.keyBind = (\u7FFB\u8A33\u5F85\u3061) \u57FA\u7840\u8BBE\u7F6E
 settings.category.debug = (\u7FFB\u8A33\u5F85\u3061) \u8C03\u8BD5\u8BBE\u7F6E
 
 settings.basic.backBlur = (\u7FFB\u8A33\u5F85\u3061) \u80CC\u666F\u6A21\u7CCA
@@ -26,6 +27,7 @@ settings.basic.placement = (\u7FFB\u8A33\u5F85\u3061) \u653E\u7F6E\u9762\u677F
 settings.item.enableBetterPlacement = (\u7FFB\u8A33\u5F85\u3061) \u542F\u7528\u66F4\u597D\u7684\u653E\u7F6E\u9762\u677F
 
 settings.basic.modsDialog = (\u7FFB\u8A33\u5F85\u3061) \u6A21\u7EC4\u7BA1\u7406\u5668
+settings.item.enableBetterModsDialog = (\u7FFB\u8A33\u5F85\u3061) \u542F\u7528\u66F4\u597D\u7684\u6A21\u7EC4\u7BA1\u7406\u5668
 
 settings.debug.logging = (\u7FFB\u8A33\u5F85\u3061) \u65E5\u5FD7\u4FE1\u606F
 settings.item.loadingInfo = (\u7FFB\u8A33\u5F85\u3061) \u8F93\u51FA\u52A0\u8F7D\u4FE1\u606F
@@ -40,6 +42,7 @@ dialog.mods.menu = (\u7FFB\u8A33\u5F85\u3061) \u83DC\u5355
 dialog.mods.upgradeAll = (\u7FFB\u8A33\u5F85\u3061) \u5168\u90E8\u66F4\u65B0
 dialog.mods.checkUpdate = (\u7FFB\u8A33\u5F85\u3061) \u68C0\u67E5\u66F4\u65B0
 dialog.mods.checkFailed = (\u7FFB\u8A33\u5F85\u3061) \u83B7\u53D6\u5931\u8D25
+dialog.mods.checkUpdateFailed = (\u7FFB\u8A33\u5F85\u3061) \u68C0\u67E5\u66F4\u65B0\u5931\u8D25
 dialog.mods.downloadFailed = (\u7FFB\u8A33\u5F85\u3061) \u4E0B\u8F7D\u5931\u8D25
 dialog.mods.checkUpdating = (\u7FFB\u8A33\u5F85\u3061) \u6B63\u5728\u68C0\u67E5\u66F4\u65B0
 dialog.mods.updateValid = (\u7FFB\u8A33\u5F85\u3061) \u6B64mod\u6709\u53EF\u7528\u7684\u66F4\u65B0\n\u6700\u65B0\u7248\u672C\uFF1A{0}
