--- a/assets/bundles/bundle_ru.properties
+++ b/assets/bundles/bundle_ru.properties
@@ -1,8 +1,9 @@
-he.mod.version = beta-0.3
-he.mod.updateDate = 28 \u0430\u043F\u0440. 2025\u202F\u0433.
+he.mod.version = beta-0.4
+he.mod.updateDate = 29 \u0430\u043F\u0440. 2025\u202F\u0433.
 
 settings.helium = (\u043D\u0443\u0436\u0435\u043D \u043F\u0435\u0440\u0435\u0432\u043E\u0434) \u6C26\u914D\u7F6E
 settings.category.basic = (\u043D\u0443\u0436\u0435\u043D \u043F\u0435\u0440\u0435\u0432\u043E\u0434) \u57FA\u7840\u8BBE\u7F6E
+settings.category.keyBind = (\u043D\u0443\u0436\u0435\u043D \u043F\u0435\u0440\u0435\u0432\u043E\u0434) \u57FA\u7840\u8BBE\u7F6E
 settings.category.debug = (\u043D\u0443\u0436\u0435\u043D \u043F\u0435\u0440\u0435\u0432\u043E\u0434) \u8C03\u8BD5\u8BBE\u7F6E
 
 settings.basic.backBlur = (\u043D\u0443\u0436\u0435\u043D \u043F\u0435\u0440\u0435\u0432\u043E\u0434) \u80CC\u666F\u6A21\u7CCA
@@ -26,6 +27,7 @@ settings.basic.placement = (\u043D\u0443\u0436\u0435\u043D \u043F\u0435\u0440\u0
 settings.item.enableBetterPlacement = (\u043D\u0443\u0436\u0435\u043D \u043F\u0435\u0440\u0435\u0432\u043E\u0434) \u542F\u7528\u66F4\u597D\u7684\u653E\u7F6E\u9762\u677F
 
 settings.basic.modsDialog = (\u043D\u0443\u0436\u0435\u043D \u043F\u0435\u0440\u0435\u0432\u043E\u0434) \u6A21\u7EC4\u7BA1\u7406\u5668
+settings.item.enableBetterModsDialog = (\u043D\u0443\u0436\u0435\u043D \u043F\u0435\u0440\u0435\u0432\u043E\u0434) \u542F\u7528\u66F4\u597D\u7684\u6A21\u7EC4\u7BA1\u7406\u5668
 
 settings.debug.logging = (\u043D\u0443\u0436\u0435\u043D \u043F\u0435\u0440\u0435\u0432\u043E\u0434) \u65E5\u5FD7\u4FE1\u606F
 settings.item.loadingInfo = (\u043D\u0443\u0436\u0435\u043D \u043F\u0435\u0440\u0435\u0432\u043E\u0434) \u8F93\u51FA\u52A0\u8F7D\u4FE1\u606F
@@ -40,6 +42,7 @@ dialog.mods.menu = (\u043D\u0443\u0436\u0435\u043D \u043F\u0435\u0440\u0435\u043
 dialog.mods.upgradeAll = (\u043D\u0443\u0436\u0435\u043D \u043F\u0435\u0440\u0435\u0432\u043E\u0434) \u5168\u90E8\u66F4\u65B0
 dialog.mods.checkUpdate = (\u043D\u0443\u0436\u0435\u043D \u043F\u0435\u0440\u0435\u0432\u043E\u0434) \u68C0\u67E5\u66F4\u65B0
 dialog.mods.checkFailed = (\u043D\u0443\u0436\u0435\u043D \u043F\u0435\u0440\u0435\u0432\u043E\u0434) \u83B7\u53D6\u5931\u8D25
+dialog.mods.checkUpdateFailed = (\u043D\u0443\u0436\u0435\u043D \u043F\u0435\u0440\u0435\u0432\u043E\u0434) \u68C0\u67E5\u66F4\u65B0\u5931\u8D25
 dialog.mods.downloadFailed = (\u043D\u0443\u0436\u0435\u043D \u043F\u0435\u0440\u0435\u0432\u043E\u0434) \u4E0B\u8F7D\u5931\u8D25
 dialog.mods.checkUpdating = (\u043D\u0443\u0436\u0435\u043D \u043F\u0435\u0440\u0435\u0432\u043E\u0434) \u6B63\u5728\u68C0\u67E5\u66F4\u65B0
 dialog.mods.updateValid = (\u043D\u0443\u0436\u0435\u043D \u043F\u0435\u0440\u0435\u0432\u043E\u0434) \u6B64mod\u6709\u53EF\u7528\u7684\u66F4\u65B0\n\u6700\u65B0\u7248\u672C\uFF1A{0}
