修复mod浏览器的性能问题

--- a/assets/bundles/bundle_zh_CN.properties
+++ b/assets/bundles/bundle_zh_CN.properties
@@ -48,6 +48,7 @@ dialog.mods.menu = \u83DC\u5355
 dialog.mods.upgradeAll = \u5168\u90E8\u66F4\u65B0
 dialog.mods.checkUpdate = \u68C0\u67E5\u66F4\u65B0
 dialog.mods.checkFailed = \u83B7\u53D6\u5931\u8D25
+dialog.mods.githubMod = \u6765\u81EAGithub\u7684Mod
 dialog.mods.checkUpdateFailed = \u68C0\u67E5\u66F4\u65B0\u5931\u8D25
 dialog.mods.downloadFailed = \u4E0B\u8F7D\u5931\u8D25
 dialog.mods.checkUpdating = \u6B63\u5728\u68C0\u67E5\u66F4\u65B0
