--- a/assets/bundles/bundle_zh_TW.properties
+++ b/assets/bundles/bundle_zh_TW.properties
@@ -48,6 +48,7 @@ dialog.mods.menu = (\u5F85\u7FFB\u8B6F) \u83DC\u5355
 dialog.mods.upgradeAll = (\u5F85\u7FFB\u8B6F) \u5168\u90E8\u66F4\u65B0
 dialog.mods.checkUpdate = (\u5F85\u7FFB\u8B6F) \u68C0\u67E5\u66F4\u65B0
 dialog.mods.checkFailed = (\u5F85\u7FFB\u8B6F) \u83B7\u53D6\u5931\u8D25
+dialog.mods.githubMod = (\u5F85\u7FFB\u8B6F) Github Mod
 dialog.mods.checkUpdateFailed = (\u5F85\u7FFB\u8B6F) \u68C0\u67E5\u66F4\u65B0\u5931\u8D25
 dialog.mods.downloadFailed = (\u5F85\u7FFB\u8B6F) \u4E0B\u8F7D\u5931\u8D25
 dialog.mods.checkUpdating = (\u5F85\u7FFB\u8B6F) \u6B63\u5728\u68C0\u67E5\u66F4\u65B0
