--- a/assets/bundles/bundle_de_DE.properties
+++ b/assets/bundles/bundle_de_DE.properties
@@ -48,6 +48,7 @@ dialog.mods.menu = (\u00DCbersetzung w\u00FCnschen) \u83DC\u5355
 dialog.mods.upgradeAll = (\u00DCbersetzung w\u00FCnschen) \u5168\u90E8\u66F4\u65B0
 dialog.mods.checkUpdate = (\u00DCbersetzung w\u00FCnschen) \u68C0\u67E5\u66F4\u65B0
 dialog.mods.checkFailed = (\u00DCbersetzung w\u00FCnschen) \u83B7\u53D6\u5931\u8D25
+dialog.mods.githubMod = (\u00DCbersetzung w\u00FCnschen) Github Mod
 dialog.mods.checkUpdateFailed = (\u00DCbersetzung w\u00FCnschen) \u68C0\u67E5\u66F4\u65B0\u5931\u8D25
 dialog.mods.downloadFailed = (\u00DCbersetzung w\u00FCnschen) \u4E0B\u8F7D\u5931\u8D25
 dialog.mods.checkUpdating = (\u00DCbersetzung w\u00FCnschen) \u6B63\u5728\u68C0\u67E5\u66F4\u65B0
