--- a/assets/bundles/bundle_ja.properties
+++ b/assets/bundles/bundle_ja.properties
@@ -48,6 +48,7 @@ dialog.mods.menu = (\u7FFB\u8A33\u5F85\u3061) \u83DC\u5355
 dialog.mods.upgradeAll = (\u7FFB\u8A33\u5F85\u3061) \u5168\u90E8\u66F4\u65B0
 dialog.mods.checkUpdate = (\u7FFB\u8A33\u5F85\u3061) \u68C0\u67E5\u66F4\u65B0
 dialog.mods.checkFailed = (\u7FFB\u8A33\u5F85\u3061) \u83B7\u53D6\u5931\u8D25
+dialog.mods.githubMod = (\u7FFB\u8A33\u5F85\u3061) Github Mod
 dialog.mods.checkUpdateFailed = (\u7FFB\u8A33\u5F85\u3061) \u68C0\u67E5\u66F4\u65B0\u5931\u8D25
 dialog.mods.downloadFailed = (\u7FFB\u8A33\u5F85\u3061) \u4E0B\u8F7D\u5931\u8D25
 dialog.mods.checkUpdating = (\u7FFB\u8A33\u5F85\u3061) \u6B63\u5728\u68C0\u67E5\u66F4\u65B0
