--- a/assets/bundles/bundle_ru.properties
+++ b/assets/bundles/bundle_ru.properties
@@ -48,6 +48,7 @@ dialog.mods.menu = (\u043D\u0443\u0436\u0435\u043D \u043F\u0435\u0440\u0435\u043
 dialog.mods.upgradeAll = (\u043D\u0443\u0436\u0435\u043D \u043F\u0435\u0440\u0435\u0432\u043E\u0434) \u5168\u90E8\u66F4\u65B0
 dialog.mods.checkUpdate = (\u043D\u0443\u0436\u0435\u043D \u043F\u0435\u0440\u0435\u0432\u043E\u0434) \u68C0\u67E5\u66F4\u65B0
 dialog.mods.checkFailed = (\u043D\u0443\u0436\u0435\u043D \u043F\u0435\u0440\u0435\u0432\u043E\u0434) \u83B7\u53D6\u5931\u8D25
+dialog.mods.githubMod = (\u043D\u0443\u0436\u0435\u043D \u043F\u0435\u0440\u0435\u0432\u043E\u0434) Github Mod
 dialog.mods.checkUpdateFailed = (\u043D\u0443\u0436\u0435\u043D \u043F\u0435\u0440\u0435\u0432\u043E\u0434) \u68C0\u67E5\u66F4\u65B0\u5931\u8D25
 dialog.mods.downloadFailed = (\u043D\u0443\u0436\u0435\u043D \u043F\u0435\u0440\u0435\u0432\u043E\u0434) \u4E0B\u8F7D\u5931\u8D25
 dialog.mods.checkUpdating = (\u043D\u0443\u0436\u0435\u043D \u043F\u0435\u0440\u0435\u0432\u043E\u0434) \u6B63\u5728\u68C0\u67E5\u66F4\u65B0
